Update processing message text for clarity

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- Processing message -->
     <p id="processingMessage" class="processing-message" style="display:none;">
-        Processing your image… This may take a few seconds.
+        Processing your image… This may take a few moments...
     </p>
 
     <!-- Process button -->
